--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jasmine": "^3.5.0",
     "make-runnable": "^1.3.6",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
     "eslint": "^6.6.0"
