--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jasmine": "^3.5.0",
     "make-runnable": "^1.3.6",
     "pg": "^7.12.1",
+    "request-promise": "^4.2.5",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
